# protheus-broker-monitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.ps1  build.sh  config.example.json  pyproject.toml
src/broker_monitor/: __main__.py  cli.py  cluster_restarter.py  config.py  monitor.py  notifier.py  restarter.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/unit/: test_cluster_restarter.py  test_config.py  test_monitor.py  test_notifier.py  test_restarter.py
